<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation">commons</string>
    <string name="app_version" tools:ignore="MissingTranslation">%1$s (%2$d)\n%3$s</string>

    <string name="activity_observers_title">Observers</string>

    <string name="preference_category_observers_no_default_set">Not defined</string>
    <string name="preference_category_about">About</string>
    <string name="preference_category_about_app_version">App version</string>

    <string name="synchro_device_status">Device status</string>
    <string name="synchro_last_synchronization">Last synchronization</string>
    <string name="synchro_last_synchronization_date">EEE dd MMM yyyy, kk:mm:ss</string>
    <string name="synchro_last_synchronization_never">Never</string>
    <string name="synchro_inputs_not_synchronized">Inputs not synchronized</string>

    <string name="synchro_server_status">Server status</string>
    <string name="synchro_data_transfer_server_mobile">Data transfer (from server)</string>
    <string name="synchro_data_transfer_mobile_server">Upload data</string>
    <string name="synchro_device_hint">device</string>
    <string name="synchro_server_hint">server</string>
    <string name="synchro_server_status_pending">Pending &#8230;</string>
    <string name="synchro_server_status_ok">OK</string>
    <string name="synchro_server_status_ko">Failed</string>
    <string name="synchro_message_downloading">Downloading \'%1$s\' &#8230;</string>
    <string name="synchro_message_downloading_file_ok">Done with file</string>
    <string name="synchro_message_downloading_copy_file_ko">Failed to copy \'%1$s\'</string>
    <string name="synchro_message_downloading_file_ko">Failed to download \'%1$s\'</string>
    <string name="synchro_message_downloading_complete">Done</string>
    <string name="synchro_message_downloading_complete_with_errors">Done with errors</string>
    <string name="synchro_message_downloading_aborted">Aborted</string>
    <string name="synchro_message_upload_no_data">Nothing to upload</string>
    <string name="synchro_message_upload_unable_to_load_dir">Unable to read inputs</string>
    <string name="synchro_message_uploading">Uploading \'%1$s\' &#8230;</string>
    <string name="synchro_message_uploading_file_ok">Done with file</string>
    <string name="synchro_message_uploading_file_ko">Failed to upload \'%1$s\'</string>
    <string name="synchro_message_uploading_complete">Done</string>
    <string name="synchro_message_uploading_complete_with_errors">Done with errors</string>

    <string name="pager_fragment_observers_and_date_title">Observers &#38; date</string>
    <string name="pager_fragment_taxa_title">Taxa</string>
    <string name="pager_fragment_counting_title">Counting</string>
    <string name="pager_fragment_criteria_title">Criteria</string>
    <string name="pager_fragment_results_input_title">Results</string>

    <string name="alert_dialog_confirm_cancel_synchro_title">Cancelling ?</string>
    <string name="alert_dialog_confirm_cancel_synchro_message">Would you cancelling the synchronization step ?</string>
    <string name="alert_dialog_confirm_delete_inputs_title">Delete all inputs ?</string>
    <string name="alert_dialog_confirm_delete_inputs_message">Would you delete all not synchronized inputs ?</string>
    <string name="alert_dialog_datetime_tab_date">Date</string>
    <string name="alert_dialog_datetime_tab_time">Time</string>
    <string name="alert_dialog_taxa_filter_status_title">Filter by status</string>
    <string name="alert_dialog_confirm_delete_taxon_title">Delete taxon ?</string>
    <string name="alert_dialog_confirm_delete_taxon_message">Would you delete this taxon ?</string>
    <string name="alert_dialog_add_comment_title">Add a comment</string>
    <string name="alert_dialog_edit_comment_title">Edit a comment</string>
    <string name="alert_dialog_add_comment_hint">Add a comment</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="progress_title">Please wait</string>
    <string name="progress_message_loading_settings">Loading global settings &#8230;</string>

    <string name="message_input_reloaded">Previously started prospecting reloaded</string>
    <string name="message_device_status_waiting">Please wait &#8230;</string>
    <string name="message_settings_not_found">Unable to load settings \'%1$s\'</string>

    <string name="observers_and_date_selected_observers">Selected observers</string>
    <string name="observers_and_date_date">Date</string>
    <string name="observers_and_date_add_observer">Add observer</string>

    <string name="taxa_no_data">No taxon to display</string>
    <plurals name="taxa_count">
        <item quantity="one">One taxon</item>
        <item quantity="other">%d taxa</item>
    </plurals>
    <string name="taxa_search_hint">Search for taxa</string>
    <string name="taxa_heritage_hint">heritage</string>
    <string name="taxon_status_search">To search</string>
    <string name="taxon_status_new">New</string>
    <string name="taxon_status_optional">Optional</string>

    <string name="counting_no_data">No criterion to display</string>
    <string name="counting_adult_male">Adult male</string>
    <string name="counting_adult_female">Adult female</string>
    <string name="counting_adult_undetermined">Unknown adult</string>
    <string name="counting_not_adult">Not adult</string>
    <string name="counting_young">Young</string>
    <string name="counting_yearling">Yearling</string>
    <string name="counting_undetermined">Sex and age undetermined</string>

    <string name="criteria_no_data">No criterion to display</string>

    <string name="results_input_taxa_added">{0,choice,0#No taxon|1#One taxon|1&lt;{0} taxa} added for this input</string>
    <string name="results_input_add_taxon">Add a new taxon</string>

    <string name="button_start_synchro">Start synchronization</string>
    <string name="button_start_input">Start input</string>
    <string name="button_pager_previous">Previous</string>
    <string name="button_pager_next">Next</string>
    <string name="button_pager_finish">Finish</string>
    <string name="button_counting_minus">-</string>
    <string name="button_counting_plus">+</string>

    <string name="observers_no_data">No observer to display</string>
    <plurals name="observers_count">
        <item quantity="one">One observer</item>
        <item quantity="other">%d observers</item>
    </plurals>
    <string name="observers_search_hint">Search for observers</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_unselect_all">Discard selection</string>
    <string name="action_title_item_selected">%1$d selected</string>
    <string name="action_switch_label_latin">Switch label to latin</string>
    <string name="action_switch_label_french">Switch label to french</string>
    <string name="action_delete_taxon">Delete taxon</string>
    <string name="action_comment_add">Add comment</string>
    <string name="action_comment_edit">Edit comment</string>
    <string name="action_ok">OK</string>

    <string name="snackbar_permissions_not_granted">Permissions were not granted</string>
    <string name="snackbar_permissions_granted">Permissions were been granted</string>
    <string name="snackbar_permission_external_storage_rationale">External storage permission is needed</string>
    <string name="snackbar_permission_external_storage_available">External storage Permissions have been granted</string>

    <string name="storage_status_mounted">mounted (rw)</string>
    <string name="storage_status_mounted_ro">mounted (ro)</string>
    <string name="storage_status_unmounted">unmounted</string>
    <string name="storage_size_b">%1.0f B</string>
    <string name="storage_size_kb">%1.1f kB</string>
    <string name="storage_size_mb">%1.1f MB</string>
    <string name="storage_size_gb">%1.1f GB</string>

</resources>
