<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonStartInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:text="@string/button_start_input"
        android:textStyle="bold"/>

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/buttonStartInput"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/darker_gray"/>

    <TextView
        android:id="@+id/textViewDeviceStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/synchro_device_status"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <View
        android:id="@+id/viewSeparator1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textViewDeviceStatus"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/darker_gray_translucent"/>

    <ListView
        android:id="@+id/listViewDeviceStatus"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/viewSeparator1"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSeparator1"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/message_device_status_waiting"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonStartSynchronization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSeparator1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="140dp"
        android:enabled="false"
        android:text="@string/button_start_synchro"
        android:textStyle="bold"/>

</RelativeLayout>